# soft-architect-mai

./: CMakeLists.txt  Makefile  README.md  data.sql
docker/: docker-compose.yaml
docker/proxysql/: Dockerfile  proxysql.cnf
includes/: headers.hpp
kafka/: kafka_handler.cpp
server/: CMakeLists.txt
server/templates/: index.html
srcs/: request_factory.cpp  request_handler.cpp  server.cpp  utils.cpp  webpage_handler.cpp
tests/: tests.cpp
